# flashcard

./: .env  .eslintrc.js  ToDo.md  api_docs.md  start_backend.sh
UpdateLog/: UpdateFrom15_10_2023.log.md
backend/: .env_template  .gitignore  Cargo.toml  db_template.sql  makefile
backend/src/: auth.rs  db.rs  demo.html  main.rs  models.rs  routes.rs  schema.rs  tests.rs  utils.rs
backend/src/api/: mod.rs
backend/src/api/api_v1/: api_models.rs  mod.rs  wrapped.rs
backend/src/api/api_v1/endpoints/: auth.rs  cards.rs  mod.rs  users.rs
frontend/: .eslintrc.js  .gitignore  babel.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.svelte  App.vue  Flashcard.svelte  Menu.svelte  main.js
frontend/src/components/: Cardlist.vue  Flashcard.vue
