[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.0.0"
actix-rt = "2.5"
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
env_logger = "0.10"
diesel = { version = "2.1.3", features = ["mysql"] }
serde_json = "1.0.107"
