[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.0.0"
actix-rt = "2.5"
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
diesel = { version = "2.1.3", features = ["mysql", "r2d2"] }
jsonwebtoken = "9.0.0"
regex = "1.10.2"
argon2 = "0.5.2"
